[gd_scene load_steps=41 format=3 uid="uid://cxlrwdgxhrbi8"]

[ext_resource type="Script" path="res://Game/03-Pig/pig.gd" id="1_0rloe"]
[ext_resource type="Shader" path="res://Game/03-Pig/pig.gdshader" id="2_1cqkf"]
[ext_resource type="Texture2D" uid="uid://t772rip1vmkf" path="res://Game/03-Pig/Attack (34x28).png" id="2_o88a0"]
[ext_resource type="Texture2D" uid="uid://clptth51uar0k" path="res://Game/03-Pig/Idle (34x28).png" id="3_46cs6"]
[ext_resource type="Texture2D" uid="uid://ddonk3un1krhx" path="res://Game/03-Pig/Run (34x28).png" id="4_wh7me"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_olsix"]
resource_local_to_scene = true
shader = ExtResource("2_1cqkf")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifer = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_oi7lm"]
atlas = ExtResource("2_o88a0")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3dxo"]
atlas = ExtResource("2_o88a0")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_nseyh"]
atlas = ExtResource("2_o88a0")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jule8"]
atlas = ExtResource("2_o88a0")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl5sp"]
atlas = ExtResource("2_o88a0")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxlwq"]
atlas = ExtResource("3_46cs6")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts46m"]
atlas = ExtResource("3_46cs6")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6eri"]
atlas = ExtResource("3_46cs6")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1yrv"]
atlas = ExtResource("3_46cs6")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv0pg"]
atlas = ExtResource("3_46cs6")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_e70e3"]
atlas = ExtResource("3_46cs6")
region = Rect2(170, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8hjx"]
atlas = ExtResource("3_46cs6")
region = Rect2(204, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4n8q"]
atlas = ExtResource("3_46cs6")
region = Rect2(238, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ordxf"]
atlas = ExtResource("3_46cs6")
region = Rect2(272, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgew0"]
atlas = ExtResource("3_46cs6")
region = Rect2(306, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwq4o"]
atlas = ExtResource("3_46cs6")
region = Rect2(340, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mchra"]
atlas = ExtResource("4_wh7me")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1gi7"]
atlas = ExtResource("4_wh7me")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_me66a"]
atlas = ExtResource("4_wh7me")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_agjab"]
atlas = ExtResource("4_wh7me")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3uok"]
atlas = ExtResource("4_wh7me")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mubm"]
atlas = ExtResource("4_wh7me")
region = Rect2(170, 0, 34, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_0le26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi7lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3dxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nseyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jule8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl5sp")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxlwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts46m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6eri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1yrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv0pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e70e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8hjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4n8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ordxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgew0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwq4o")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mchra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1gi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me66a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agjab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3uok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mubm")
}],
"loop": false,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_kahn4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [SubResource("SpriteFrames_0le26")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_modifer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_fbhd7"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playerHit"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mh6vu"]
_data = {
"RESET": SubResource("Animation_kahn4"),
"attack": SubResource("Animation_fbhd7")
}

[sub_resource type="Animation" id="Animation_q384p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_modifer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_0e4rr"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_modifer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cos2q"]
_data = {
"RESET": SubResource("Animation_q384p"),
"hit": SubResource("Animation_0e4rr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3y8uf"]
size = Vector2(150, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u011n"]
size = Vector2(13.5, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yon7q"]
size = Vector2(13.5, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbi7e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sh2oy"]
size = Vector2(18, 16)

[node name="Pig" type="CharacterBody2D" groups=["Pigs"]]
material = SubResource("ShaderMaterial_olsix")
collision_layer = 8
collision_mask = 7
script = ExtResource("1_0rloe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_0le26")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mh6vu")
}

[node name="AttackedAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cos2q")
}

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(3, 5)
shape = SubResource("RectangleShape2D_3y8uf")

[node name="RightAttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RightAttackArea"]
position = Vector2(9.25, 4)
shape = SubResource("RectangleShape2D_u011n")

[node name="LeftAttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAttackArea"]
position = Vector2(-4.25, 4)
shape = SubResource("RectangleShape2D_yon7q")

[node name="AttackHitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitBox"]
position = Vector2(3, 5)
shape = SubResource("RectangleShape2D_gbi7e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3, 6)
shape = SubResource("RectangleShape2D_sh2oy")

[node name="HealthBar" type="ProgressBar" parent="."]
self_modulate = Color(0, 1, 0, 1)
offset_left = -12.0
offset_top = -10.0
offset_right = 138.0
offset_bottom = 17.0
scale = Vector2(0.2, 0.2)
value = 100.0
show_percentage = false

[node name="CanTakeDamage" type="Timer" parent="."]
wait_time = 0.65
one_shot = true

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
[connection signal="area_entered" from="RightAttackArea" to="." method="_on_right_attack_area_area_entered"]
[connection signal="area_exited" from="RightAttackArea" to="." method="_on_right_attack_area_area_exited"]
[connection signal="area_entered" from="LeftAttackArea" to="." method="_on_left_attack_area_area_entered"]
[connection signal="area_exited" from="LeftAttackArea" to="." method="_on_left_attack_area_area_exited"]
[connection signal="area_entered" from="AttackHitBox" to="." method="_on_attack_hit_box_area_entered"]
[connection signal="area_exited" from="AttackHitBox" to="." method="_on_attack_hit_box_area_exited"]
